--- a/mail-api/pom.xml
+++ b/mail-api/pom.xml
@@ -11,26 +11,16 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>import</artifactId>
+    <artifactId>mail-api</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
-    <name>Import</name>
+    <packaging>jar</packaging>
+    <name>Mail API</name>
 
     <dependencies>
         <dependency>
             <groupId>ru.javaops</groupId>
             <artifactId>common</artifactId>
             <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.j2html</groupId>
-            <artifactId>j2html</artifactId>
-            <version>RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
         </dependency>
     </dependencies>
 </project>
