--- a/import/pom.xml
+++ b/import/pom.xml
@@ -6,8 +6,8 @@
 
     <parent>
         <groupId>ru.javaops</groupId>
-        <artifactId>parent</artifactId>
-        <relativePath>../parent/pom.xml</relativePath>
+        <artifactId>parent-web</artifactId>
+        <relativePath>../parent-web/pom.xml</relativePath>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
