hw7, расшарен wsdl для всех модулей в \apps\masterjava\config\wsdl, обновлен mailService.wsdl в соответствии с реализацией

--- a/services/mail-service/pom.xml
+++ b/services/mail-service/pom.xml
@@ -16,6 +16,18 @@
     <packaging>war</packaging>
     <name>Mail Service</name>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>${masterjava.config}/wsdl</directory>
+                <targetPath>${project.build.directory}/${build.finalName}/WEB-INF/wsdl/</targetPath>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
