--- a/services/mail-api/pom.xml
+++ b/services/mail-api/pom.xml
@@ -15,6 +15,20 @@
     <version>1.0-SNAPSHOT</version>
     <name>Mail API</name>
 
+    <build>
+        <testResources>
+            <testResource>
+                <directory>${masterjava.config}</directory>
+                <includes>
+                    <include>wsdl/mailService.wsdl</include>
+                </includes>
+            </testResource>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
